# fhe-core

./: .dockerignore  .gitignore  ADR.md  ARCHITECTURE.md  Dockerfile  PHASE_3_BRIEF.md  PHASE_4_ROADMAP.md  POSTMORTEM.md  PROPOSAL_CODEX_SHORTCUTS.md  PROPOSAL_CODEX_V1.9.md  README_FINAL.md  README_INTERNAL.md  SYSTEM_PROMPT_EXPORT.md  TROUBLESHOOTING.md  agu_trace.txt  project_state_day2.txt  twiddles.hex  twiddles_4k.hex  twiddles_combined.hex
VM/: ADR.md  AI_CONTEXT.md  CMakeLists.txt  Dockerfile  FAILED_HYPOTHESES.md  PHASE_5_BRIEF.md  POSTMORTEM.md  PROPOSAL_CODEX_SHORTCUTS.md  README.md  README_INTERNAL.md  RELEASE_NOTES_v4.0.md  SYSTEM_PROMPT_EXPORT.md  TROUBLESHOOTING.md  ntt_config_4k.py
VM/.github/workflows/: main.yml
VM/src/: dpi_impl.cpp  dpi_impl.h  emulator_core.cpp  fhe_impl.cpp  isa_spec.h  main.cpp  ntt_engine_tester.cpp  ntt_test_core.cpp  spike_pybind.cpp
VM/src/python/: logos_sdk.py
VM/src/python/ntt_research/: gen_twiddles_4k.py
VM/src/rtl/: burst_test.v  command_processor.v  copy_engine.v  counter.v  dma_unit.v  dpi_mem_wrapper.v  fifo_mem_arbiter.v  logos_core.v  mem_arbiter.v  mem_test.v
VM/src/rtl/ntt/: arbiter_test_shim.v  butterfly.v  command_processor.v  logos_core.v  mem_arbiter.v  mod_add.v  mod_mult.v  ntt_arith_unit.v  ntt_control.v  ntt_core.v  ntt_engine.v  twiddle_rom.v  vec_alu.v
VM/src/rtl/ntt_backup_phase5/: arbiter_test_shim.v  butterfly.v  command_processor.v  hazard_unit.v  logos_core.v  mod_sub.v  ntt_arith_unit.v  ntt_control.v  ntt_core.v  ntt_engine.v  twiddle_rom.v  vec_alu.v
VM/src/spike_memory/: mmap_bench.cpp
VM/src/tools/: seal_exporter.cpp
VM/tests/: demo_psi.py  test_day10_emerald.py  test_day10_final.py  test_day10_platinum.py  test_day4_command.py  test_day4_integration.py  test_day5_multibank.py  test_day6_sdk.py  test_day7_burst.py  test_day7_full_stack.py  test_day7_fuzz.py  test_day8_rns_math.py  test_day8_scaling.py  test_day9_bfv.py  test_day9_shadow.py  test_ntt_agu.py  test_ntt_arithmetic.py
VM/tests/day07_full_chain/: test_full_chain.py
VM/tests/day10/: test_diamond_final.py
VM/tests/day6/: test_day6_parallel.py  test_dual_core_smoke.py  test_phase6_integration.py
VM/tests/day7/: test_sapphire_loop.py
VM/tests/day9/: test_alu.py
benchmarks/: roofline.py  run_microbench.py
docs/: ARCHITECTURE.md
src/: alu_tester.cpp  arbiter_tester_bindings.cpp  dpi_impl.h  main.cpp  ntt_agu_tester.cpp  sim_main_day3.cpp
src/python/: logos.py  logos_scheduler.py  logos_sdk.py  rns_math.py
src/python/ntt_research/: agu_ref.py  gen_twiddles.py  gen_twiddles_4k.py  gen_twiddles_intt.py  ntt_golden.py  regen_base_config.py
src/rtl/: command_processor.v  dma_unit.v  dpi_mem_wrapper.v  logos_core.v  mem_arbiter.v  sync_fifo.v
src/rtl/ntt/: arbiter_test_shim.v  butterfly.v  hazard_unit.v  ntt_arith_unit.v  ntt_engine.v  vec_alu.v
src/rtl/ntt_backup_phase5/: command_processor.v  mem_arbiter.v
tests/: logos_sdk.py  test_bit_exact.py  test_day10_diamond.py  test_day1_arbiter.py  test_day2.py  test_day2_alu.py  test_day2_smart_trace.py  test_day4_perf.py  test_day5_dual_core.py  test_day6_dpi.py  test_day6_hazards.py  test_day7_arbiter.py  test_day8_dma.py  test_day8_fhe.py  test_day8_rns_hw.py  test_day9_intt.py  test_day9_scheduler.py  test_incident_repro.py  test_ntt_integration.py  test_trace_canary.py
tests/day01_fifo/: test_fifo.py
tests/day03_pingpong/: test_pingpong.py
tests/day07_full_chain/: test_full_chain.py
tests/day10/: test_diamond.py
tests/day11/: benchmark_dma.py
tests/day6/: debug_api.py  logos_sdk.py  ntt_smoke_tb.cpp  ntt_smoke_tb_v2.cpp  test_context_loading.py  test_day5_dual_context.py
tests/day8/: test_rns.py
